--- a/Emacs.org
+++ b/Emacs.org
@@ -223,6 +223,21 @@ C-c C-e
 | C-M-/                 | 格式化                                                   |
 |-----------------------+----------------------------------------------------------|
 | C-q key               | 在某些key被占用的模式下,输入key,例如输入TAB              |
+
+#+TBLNAME:大小写转换
+| 快捷键  | 说明                       |
+|---------+----------------------------|
+| M-c     | 首字母改为大写             |
+| M-u     | 全部改为大写               |
+| M-l     | 全部改为小写               |
+|---------+----------------------------|
+| M- M-c  | 单词前半部分首字母改为大写 |
+| M- M-u  | 单词前半部分改为大写       |
+| M- M-l  | 单词后半部分全部改为小写   |
+|---------+----------------------------|
+| C-x C-l | 选定区域全部改为小写       |
+| C-x C-u | 选定区域全部改为大写       |
+
 ** 编码
 | 快捷键                               | 说明                         |
 |--------------------------------------+------------------------------|
