--- a/Emacs.org
+++ b/Emacs.org
@@ -1,10 +1,11 @@
-#+TAGS：future(f),normal(n),important(i)
-#+TITLE:记录Emacs的相关内容
-#+AUTHOR:一个菜鸟
-#+DATE:2016/01/13 22:36:21
-#+EMAIL:xxxx@xxx.xxx
-#+KEYWORDS:Emacs,org
-* Emacs相关的内容
+#+tags：future(f),normal(n),important(i)
+#+title:记录Emacs的相关内容
+#+author:一个菜鸟
+#+date:2016/01/13 22:36:21
+#+email:xxxx@xxx.xxx
+#+keywords:Emacs,org
+#+startup: overview
+
 ** 中英文
 网上有中英文对齐的解决方案chinese-fonts-setup，暂时用到的不多，暂时搁置.
 今天试着设置了chinese-fonts-setup，但是会重置我设置的字体大小，最后呈现出来的
@@ -177,7 +178,7 @@ C-c C-e
    /nick nickname
 
 ** 常用的快捷键
-#+TBLNAME:常用快捷键
+#+tblname:常用快捷键
 | 快捷键                | 说明                                                     |
 |-----------------------+----------------------------------------------------------|
 | C-x C-f               | 打开一个文件                                             |
@@ -223,8 +224,10 @@ C-c C-e
 | C-M-/                 | 格式化                                                   |
 |-----------------------+----------------------------------------------------------|
 | C-q key               | 在某些key被占用的模式下,输入key,例如输入TAB              |
+|-----------------------+----------------------------------------------------------|
+| C-h m                 | 查看当前major-mode                                           |
 
-#+TBLNAME:大小写转换
+#+tblname:大小写转换
 | 快捷键  | 说明                       |
 |---------+----------------------------|
 | M-c     | 首字母改为大写             |
