--- a/Emacs.org
+++ b/Emacs.org
@@ -125,7 +125,11 @@ Dota2#<<my-anchor>>是一种游戏[1],很流行
 [1] 游戏
 *** 表格
 #+LABEL: tb1:table1   ---这个也不知道干嘛的
-#+TBLNAME:表格名
+#+TBLNAMEcemacs
+          f:/github/emacs-private/1.jpg
+          f:/github/emacs-private/Emacs.org
+          f:/github/emacs-private/testjs.js
+     :表格名
 | 快捷键         | 说明                                                   |     |
 |----------------+--------------------------------------------------------+-----|
 | C-c 竖杠       | 创建表格                                               | 345 |
@@ -179,53 +183,58 @@ C-c C-e
 
 ** 常用的快捷键
 #+tblname:常用快捷键
-| 快捷键                | 说明                                                     |
-|-----------------------+----------------------------------------------------------|
-| C-x C-f               | 打开一个文件                                             |
-| C-x C-b               | 打开所有的buffer的目录,然后就可以选择打开哪一个          |
-| C-x b                 | 选择打开哪一个buffer                                     |
-| C-x k                 | 关闭一个buffer                                           |
-| M-x kill-some-buffers | 逐个询问所有buffer是否删除                               |
-|-----------------------+----------------------------------------------------------|
-| C-a                   | 移动到行首                                               |
-| M-a                   | 移动到句首                                               |
-| C-e                   | 移动到行尾                                               |
-| M-e                   | 移动到句尾                                               |
-| C-n/p                 | 移动到下/上一行                                          |
-| C-f/b                 | 移动到下/上一个字符                                      |
-| M-f/b                 | 移动到下/上一个词                                        |
-|-----------------------+----------------------------------------------------------|
-| C-S-Space/C-@         | 开始标记，minibuffer会出现Mark set                       |
-| C-x C-s               | 保存                                                     |
-| C-x C-w               | 另存为                                                   |
-| C-/                   | 撤销，一直按就一直撤销                                   |
-| C-x u                 | 撤销，会打开undotree，然后选择到哪个节点就撤销到哪个节点 |
-| C-w/M-w               | 剪切/粘贴                                                |
-| C-y                   | 粘贴                                                     |
-| C-x h                 | 全选                                                     |
-| C-s/r                 | 向前/后增量搜索                                          |
-| C-M-s/r               | 用正则表达式向前/后增量搜索                              |
-|-----------------------+----------------------------------------------------------|
-| C-d                   | 删除光标之后的一个字符                                   |
-| M-d                   | 删除光标之后的一个词                                     |
-| C-k                   | 删除光标之后的本行的内容                                 |
-| M-k                   | 删除光标之后本句的内容                                   |
-| BackSpace             | 删除光标之前的一个字符                                   |
-| C-BackSpace           | 删除光标之前本行的内容                                   |
-| M-BackSpace           | 删除光标之前本句的内容                                   |
-|-----------------------+----------------------------------------------------------|
-| C-x 0                 | 关闭当前窗口                                             |
-| C-x 1                 | 关闭除当前窗口外的其它窗口                               |
-| C-x 2                 | 将当前窗口分为上下两部分                                 |
-| C-x 3                 | 将当前窗口分为左右两部分                                 |
-| C-x o                 | 光标跳转到另外一个窗口                                   |
-|-----------------------+----------------------------------------------------------|
-| C-g                   | 停止当前命令                                             |
-| C-M-/                 | 格式化                                                   |
-|-----------------------+----------------------------------------------------------|
-| C-q key               | 在某些key被占用的模式下,输入key,例如输入TAB              |
-|-----------------------+----------------------------------------------------------|
-| C-h m                 | 查看当前major-mode                                           |
+| 快捷键                  | 说明                                                            |
+|-------------------------+-----------------------------------------------------------------|
+| C-x C-f                 | 打开一个文件                                                    |
+| C-x C-b                 | 打开所有的buffer的目录,然后就可以选择打开哪一个                 |
+| C-x b                   | 选择打开哪一个buffer                                            |
+| C-x k                   | 关闭一个buffer                                                  |
+| M-x kill-some-buffers   | 逐个询问所有buffer是否删除                                      |
+|-------------------------+-----------------------------------------------------------------|
+| C-a                     | 移动到行首                                                      |
+| M-a                     | 移动到句首                                                      |
+| C-e                     | 移动到行尾                                                      |
+| M-e                     | 移动到句尾                                                      |
+| C-n/p                   | 移动到下/上一行                                                 |
+| C-f/b                   | 移动到下/上一个字符                                             |
+| M-f/b                   | 移动到下/上一个词                                               |
+|-------------------------+-----------------------------------------------------------------|
+| C-S-Space/C-@           | 开始标记，minibuffer会出现Mark set                              |
+| C-x C-s                 | 保存                                                            |
+| C-x C-w                 | 另存为                                                          |
+| C-/                     | 撤销，一直按就一直撤销                                          |
+| C-x u                   | 撤销，会打开undotree，然后选择到哪个节点就撤销到哪个节点        |
+| C-w/M-w                 | 剪切/粘贴                                                       |
+| C-y                     | 粘贴                                                            |
+| C-x h                   | 全选                                                            |
+| C-s/r                   | 向前/后增量搜索                                                 |
+| C-M-s/r                 | 用正则表达式向前/后增量搜索                                     |
+|-------------------------+-----------------------------------------------------------------|
+| C-d                     | 删除光标之后的一个字符                                          |
+| M-d                     | 删除光标之后的一个词                                            |
+| C-k                     | 删除光标之后的本行的内容                                        |
+| M-k                     | 删除光标之后本句的内容                                          |
+| BackSpace               | 删除光标之前的一个字符                                          |
+| C-BackSpace             | 删除光标之前本行的内容                                          |
+| M-BackSpace             | 删除光标之前本句的内容                                          |
+|-------------------------+-----------------------------------------------------------------|
+| C-x 0                   | 关闭当前窗口                                                    |
+| C-x 1                   | 关闭除当前窗口外的其它窗口                                      |
+| C-x 2                   | 将当前窗口分为上下两部分                                        |
+| C-x 3                   | 将当前窗口分为左右两部分                                        |
+| C-x o                   | 光标跳转到另外一个窗口                                          |
+|-------------------------+-----------------------------------------------------------------|
+| C-g                     | 停止当前命令                                                    |
+| C-M-/                   | 格式化                                                          |
+|-------------------------+-----------------------------------------------------------------|
+| C-q key                 | 在某些key被占用的模式下,输入key,例如输入TAB                     |
+|-------------------------+-----------------------------------------------------------------|
+| C-h m                   | 查看当前major-mode                                              |
+|-------------------------+-----------------------------------------------------------------|
+| M-m f t                 | 打开当前目录的目录树                                            |
+|-------------------------+-----------------------------------------------------------------|
+| C-u 数字 其他快捷键操作 | 按给定数字重复执行最后的快捷键操作, 例如C-u 8 C-n 是向下移动8行 |
+| C-数字 其他快捷键操作   | 与上面这个一直，不过这个数字智能在0-9了，键盘上没有其他的       |
 
 #+tblname:大小写转换
 | 快捷键  | 说明                       |
@@ -260,7 +269,7 @@ org默认不显示图片
 快捷键：C-c C-x C-x预览图片
 如果默认显示需要配置M-x org-toggle-inline-images,
 或者配置文件中配置(setq org-toggle-inline-images t)
-[[file:1.jpg]]
+  [[file:1.jpg]]
 ** 目录操作快捷键
 #+TBLNAME:目录操作快捷键
 | 快捷键  | 说明                                                                                          |
@@ -281,5 +290,4 @@ org默认不显示图片
 | % m     | 根据正则表达式标记文件                                                                        |
 | % d     | 根据正则表达式标记删除                                                                        |
 | % R     | 根据正则表达式移动并重命名文件，需要先% m标记文件，然后执行这个命令。就是正则表达式替换字符串 |
-
 
